Initial page content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Pregonera</title>
    </head>
    <body>
-      <h2>Pregonera Radio</h2>
-      <audio src="http://radio.pregonera.net:6366/1/;stream/" id="stream" autoplay="true" />
+      <h2>Pregonera Radio Tango</h2>
+	  <audio controls autoplay="autoplay"><source src="http://radio.pregonera.net:6366/1/;stream//;stream.mp3" type="audio/mp3">Your browser does not support the audio element.</audio>
    </body>
 </html>
