--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         },
                         autoPlay: true,
-                        //autoLoad: true,
+                        autoLoad: true,
                         stream: true
                     });
                 }
